# AI-resume-assessment-system

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ТЗ-кандидату.md
alembic/: env.py
alembic/versions/: c7b7e2e5f4a9_initial_schema.py
app/core/: config.py  database.py
app/llm/: anthropic_client.py  client.py  deepseek.py  factory.py  openrouter.py
app/models/: candidate.py  scoring_result.py  sync_log.py  vacancy.py
docs/: disagreements.md
docs/architect_diagrams/: scoring-module.drawio
docs/superpowers/plans/: 2026-06-20-scoring-module.md
docs/superpowers/specs/: 2026-06-20-scoring-module-design.md
tests/: test_config.py  test_models.py
tests/test_llm/: test_client.py
